force-app/main/default/objects/Account/fields/aos_Email__c.field-meta.xml
<CustomField>
    <fullName>aos_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>