force-app/main/default/objects/Account/fields/aos_LGA__c.field-meta.xml
<CustomField>
    <fullName>aos_LGA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Local Government Area the Account sits within (based on Billing City + Post Code)</description>
    <inlineHelpText>The Local Government Area the Account sits within (based on Billing City + Post Code)</inlineHelpText>
    <label>LGA</label>
    <referenceTo>aos_LGA__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>