force-app/main/default/objects/Account/fields/aos_PHN__c.field-meta.xml
<CustomField>
    <fullName>aos_PHN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Primary Health Network the Account sits within (based on Billing City + Post Code)</description>
    <inlineHelpText>The Primary Health Network the Account sits within (based on Billing City + Post Code)</inlineHelpText>
    <label>PHN</label>
    <referenceTo>aos_PHN__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>